--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,69 +1,133 @@
 .Player {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 5em;
-	height: 5em;
-	background: blue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 5em;
+    height: 5em;
+    background: red;
 }
-
 .Scoreboard {
-	position: absolute;
-	left: 50%;
-	top: 10em;
-	height: 30em;
-	width: 40em;
-	margin-left: -20em;
-	box-sizing: border-box;
-	background: purple;
-	text-align: center;
-	-webkit-transform: translate(0, -40em);
-	-webkit-transition: -webkit-transform 0.5s;
+    position: absolute;
+    left: 50%;
+    top: 10em;
+    height: 30em;
+    width: 40em;
+    margin-left: -20em;
+    box-sizing: border-box;
+    background: purple;
+    text-align: center;
+    -webkit-transform: translate(0, -40em);
+    -webkit-transition: -webkit-transform 0.5s;
 }
 
 /**
 * Reset transform to animate it into the correct spot on the screen.
 */
-.Scoreboard.is-visible {
-	-webkit-transform: none;
-}
 
+.Scoreboard.is-visible {
+    -webkit-transform: none;
+}
 .Scoreboard-restart {
-	margin-top: 20em;
-	font-size: inherit;
-	padding: 0.4em 1.5em;
-	border: 0.2em solid white;
-	background: none;
-	cursor: pointer;
+    margin-top: 20em;
+    font-size: inherit;
+    padding: 0.4em 1.5em;
+    border: 0.2em solid white;
+    background: none;
+    cursor: pointer;
 }
 .Scoreboard-restartText {
-font-family: 'Comic Sans MS', serif;
-font-size: 2.4em;
-color: white;
+    font-family: 'Comic Sans MS', serif;
+    font-size: 2.4em;
+    color: white;
 }
 body {
-background: black;
+    background: black;
 }
 .browsehappy {
-margin: 0.2em 0;
-background: ?#?ccc?;
-color: #000;
-padding: 0.2em 0;
+    margin: 0.2em 0;
+    background: ?#?ccc?;
+    color: #000;
+    padding: 0.2em 0;
 }
 .GameCanvas {
-font-size: 10px;
-position: absolute;
-left: 50%;
-top: 50%;
-width: 102.4em;
-height: 57.6em;
-margin-left: -51.2em;
-margin-top: -28.8em;
-overflow: hidden;
-background: red;
-/*Added*/
-background-image: url('../images/blueClouds.jpg');
-/*background-position: 50% 0;
-background-repeat: no-repeat;
-background-size: cover;*/
+    font-size: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 102.4em;
+    height: 57.6em;
+    margin-left: -51.2em;
+    margin-top: -28.8em;
+    overflow: hidden;
+    background: red;
+    /*Added*/
+    background-image: url('../images/blueClouds.jpg');
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.Game {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 19.2em;
+  height: 10.8em;
+  margin-left: -9.6em;
+  margin-top: -5.4em;
+  background: red;
+
+  font-size: 10px;
+}
+
+
+
+.Player--default {
+  /* My x,y position is at the top left of my graphic */
+  margin-left: -0em;
+  margin-top: -0em;
+
+  transform: translate(5em, 3em);
+}
+
+.Player--centered {
+  /* My x,y position is at the center of my graphic*/
+  margin-left: -0.5em;
+  margin-top: -0.5em;
+
+  transform: translate(7em, 3em);
+}
+
+.Player--bottomCenter {
+  /* My x,y position is at the bottom center of my graphic*/
+  margin-left: -0.5em;
+  margin-top: -1em;
+
+  transform: translate(9em, 3em);
+}
+
+.Player--wings {
+  /* Positioned from top left of parent.*/
+  position: absolute;
+  left: 1em;
+  top: 2em;
+  height: 3em;
+  width: 3em;
+
+  background: yellow;
+  transform-origin: top left;
+  animation: 0.4s flap alternate infinite;
+}
+
+@keyframes flap {
+  from {
+    transform: rotateX(0);
+  }
+  to {
+    transform: rotateX(180deg);
+  }
+}
+
+.Controls {
+  position: absolute;
 }
