--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -66,68 +66,82 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .Game {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 19.2em;
-  height: 10.8em;
-  margin-left: -9.6em;
-  margin-top: -5.4em;
-  background: red;
-
-  font-size: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 19.2em;
+    height: 10.8em;
+    margin-left: -9.6em;
+    margin-top: -5.4em;
+    background: red;
+    font-size: 10px;
 }
-
-
-
 .Player--default {
-  /* My x,y position is at the top left of my graphic */
-  margin-left: -0em;
-  margin-top: -0em;
-
-  transform: translate(5em, 3em);
+    /* My x,y position is at the top left of my graphic */
+    margin-left: -0em;
+    margin-top: -0em;
+    transform: translate(5em, 3em);
 }
-
 .Player--centered {
-  /* My x,y position is at the center of my graphic*/
-  margin-left: -0.5em;
-  margin-top: -0.5em;
-
-  transform: translate(7em, 3em);
+    /* My x,y position is at the center of my graphic*/
+    margin-left: -0.5em;
+    margin-top: -0.5em;
+    transform: translate(7em, 3em);
 }
-
 .Player--bottomCenter {
-  /* My x,y position is at the bottom center of my graphic*/
-  margin-left: -0.5em;
-  margin-top: -1em;
-
-  transform: translate(9em, 3em);
+    /* My x,y position is at the bottom center of my graphic*/
+    margin-left: -0.5em;
+    margin-top: -1em;
+    transform: translate(9em, 3em);
 }
-
 .Player--wings {
-  /* Positioned from top left of parent.*/
-  position: absolute;
-  left: 1em;
-  top: 2em;
-  height: 3em;
-  width: 3em;
-
-  background: yellow;
-  transform-origin: top left;
-  animation: 0.4s flap alternate infinite;
+    /* Positioned from top left of parent.*/
+    position: absolute;
+    left: 1em;
+    top: 2em;
+    height: 3em;
+    width: 3em;
+    background: yellow;
+    transform-origin: top left;
+    animation: 0.4s flap alternate infinite;
 }
-
 @keyframes flap {
-  from {
-    transform: rotateX(0);
-  }
-  to {
-    transform: rotateX(180deg);
-  }
+    from {
+        transform: rotateX(50deg);
+    }
+    to {
+        transform: rotateX(150deg);
+    }
+}
+.Controls {
+    position: absolute;
 }
 
-.Controls {
-  position: absolute;
+/* Background move */
+
+#cloud-scroll {
+    width: 140em;
+    height: 1.5em;
+    background: url(../images/movBackgroundExtreme.png) repeat-y;
+    -webkit-animation: backgroundScroll 3s linear infinite;
+    animation: backgroundScroll 3s linear infinite;
 }
+@-webkit-keyframes backgroundScroll {
+    from {
+        background-position: 0 10em;
+    }
+    to {
+        background-position: -20em 0;
+    }
+}
+@keyframes backgroundScroll {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -20em 0;
+    }
+}
+
+/**/
