--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,16 +4,22 @@
     left: 0;
     width: 5em;
     height: 5em;
-    background: red;
+    /* background: red; */
+}
+.Player--bird {
+  position: absolute;
+  left: -1.25em;
+  top: -1.5em;
+  height: 7.5em;
+  width: 7.5em;
 }
 .Player--wings {
     /* Positioned from top left of parent.*/
     position: absolute;
-    left: 1em;
-    top: 2em;
+    left: -0.5em;
+    top: 3em;
     height: 3em;
     width: 3em;
-    background: yellow;
     transform-origin: top left;
     animation: 0.4s flap alternate infinite;
 }
@@ -25,8 +31,6 @@
         transform: rotateX(150deg);
     }
 }
-
-
 .Scoreboard {
     position: absolute;
     left: 50%;
@@ -80,10 +84,10 @@ body {
     margin-left: -51.2em;
     margin-top: -28.8em;
     overflow: hidden;
-  /*  background: red;*/
+    /*  background: red;*/
     /*Added*/
-    background-image: url('../images/blueClouds.jpg');
-    background-position: 50% 0;
+    background-image: url('../images/bg.png');
+    background-position: 50% 100%;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -95,21 +99,17 @@ body {
     height: 10.8em;
     margin-left: -9.6em;
     margin-top: -5.4em;
-  /*  background: red; */
+    /*  background: red; */
     font-size: 10px;
 }
-
-
 .Controls {
     position: absolute;
 }
-
-
 .Floor {
-	position: absolute;
-  bottom: 0;
-	background-image: url('../images/floor.png');
-	background-size:  auto;
-	width: 500em;
-	height: 3.4em;
+    position: absolute;
+    bottom: 0;
+    background-image: url('../images/ground.png');
+    background-size: auto;
+    width: 500em;
+    height: 2.5em;
 }
