--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -174,6 +174,7 @@ body {
   background-size: 40em;
 }
 .Clouds {
+    top: 6%;
     position: absolute;
     background-image: url('../images/cloud.png');
     background-repeat: repeat-x;
